examples/test/testpolicy13610.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13610
  namespace: namespace291
spec:
  podSelector:
    matchLabels:
      key28: value49
      key11: value15
      key22: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value20
      podSelector:
        matchLabels:
          key24: value24
